
[metadata]
description-file = README.md

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True
source = rss_feeds
omit =
    rss_feeds\main.py


[coverage:report]
exclude_lines =git
    pragma: no cover
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:
    if TYPE_CHECKING:

[tool:pytest]
# Directories that are not visited by pytest collector:
norecursedirs = *.egg .eggs dist build docs .tox .git __pycache__
testpaths = test/unittests

# Extra options:
;addopts =
;  --strict
;  --tb=short
;  --doctest-modules
;  --cov=vfi_dashboard_kpi_collector
;  --cov-report=term:skip-covered
;  --cov-report=html
;  --cov-branch
;  --cov-fail-under=100

[flake8]
format = wemake
show-source = True
statistics = False
doctests = True
inline-quotes = double

max-complexity = 6
max-imports = 18
max-line-length = 120
max-returns = 2
max-try-body-length = 3
select = B,C,E,F,W,T4,B9,B901
ignore = B950,E203,E231,E266,E501,F401,F403,W503,WPS110,WPS237,WPS305,WPS306,WPS607
per-file-ignores =
    **/version.py: WPS410
    **/main.py: WPS421
    **/common/enums.py: WPS115
    **/common/utils.py: WPS100
    test/*.py: WPS226, WPS430
exclude =
    .git,
    __pycache__,
    .venv,
    .eggs,
    *.egg,
    build

[darglint]
# darglint configuration:
# https://github.com/terrencepreilly/darglint
strictness = long

[mypy]
# mypy configurations: http://bit.ly/2zEl9WI
plugins =
    pydantic.mypy,
    returns.contrib.mypy.returns_plugin

mypy_path = mypy_stubs

allow_redefinition = False
check_untyped_defs = True

;disallow_any_explicit = True
pretty = True
show_error_codes = True
disallow_any_generics = True
disallow_untyped_defs = True
disallow_untyped_calls = True
ignore_errors = False
ignore_missing_imports = True
implicit_reexport = False
local_partial_types = True
strict_optional = True
strict_equality = True
no_implicit_optional = True
warn_no_return = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unreachable = True

[pydantic-mypy]
init_forbid_extra = True
init_typed = True
warn_required_dynamic_aliases = True
warn_untyped_fields = True

[mypy-test.*]
ignore_errors = True

[doc8]
# doc8 configuration: https://pypi.org/project/doc8/
ignore-path = docs/_build
max-line-length = 120
sphinx = True

[isort]
profile=black
line_length = 120
skip = build
force_single_line=True
include_trailing_comma = True
force_grid_wrap = 0
known_third_party = pytest,requests,setuptools,structlog
